--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <a href="https://djnatt.wixsite.com/natt">NattDaraC Photography</a>
     <br> 
     <br> 
-    <h4>Enter the website for Lottery Generator created by me: </h4>
-    <a href="https://djnatt.wixsite.com/natt">StarLottery</a>
-    <br> 
-    <br> 
-    <h4>Here's another website for Thai music instuments created by Mr.Mango: </h4>
+    <h4>Here's the website for Thai music instuments created by Mr.Mango: </h4>
     <a href="https://mamoowung.party/kreuung-ching/index.html">mamoowung.party</a>
-    
+    <br> 
+    <br> 
+    <h4>Enter the website for Lottery Generator: </h4>
+    <a href="https://djnatt.wixsite.com/natt">Natt's Lottery Generator Page</a>
     <br> 
     <br> 
     <button>Change user</button>
