Fixed the lotto boxes and fonts for the main page

--- a/index.html
+++ b/index.html
@@ -15,20 +15,17 @@
 
     <h3>About me</h3>
     <p> I'm a certified yoga instructor, ESL & Thai Language teacher. I enjoy photographing, art, music, cooking, learning programming and languages,.. +yoga. </p>
+    <br><br> 
     <h4>Some photos from my website:</h4>
     <a href="https://djnatt.wixsite.com/natt">NattDaraC Photography</a>
-    <br> 
-    <br> 
+    <br><br> 
     <h4>Here's the website for Thai music instuments created by Mr.Mango: </h4>
     <a href="https://mamoowung.party/kreuung-ching/index.html">mamoowung.party</a>
-    <br> 
-    <br> 
-    <h4>Enter the website for Lottery Generator: </h4>
+    <br><br> 
+    <h4>Enter the website for Lottery Generator created by me: </h4>
     <a href="lotto-page/index.html">Natt's Lottery Generator Page</a>
-    <br> 
-    <br> 
+    <br><br>  <br><br>
     <button>Change user</button>
-
     <br> <br>
 
     <script src="scripts/main.js"></script>
