--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="https://mamoowung.party/kreuung-ching/index.html">mamoowung.party</a>
     <br><br> 
     <h4>Enter the website for Lottery Generator created by me: </h4>
-    <a href="lotto-page/index.html">Natt's Lottery Generator Page</a>
+    <a href="lotto-page/index.html">Natt's Lotto Generator</a>
     <br><br>  <br><br>
     <button>Change user</button>
     <br> <br>
