--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <h1>NattDaraC.com</h1>
-    <h2>Welcome to my world!</h2>
+    <h2>Welcome to my world</h2>
     <img src="images/worldmap-natt.png" alt="My test image">
 
     <h3>About me</h3>
-    <p> I'm a certified yoga instructor, ESL & Thai Language teacher. I enjoy photographing, art, music, cooking, learning programming and languages,.. +yoga. </p>
+    <p> I'm a certified yoga instructor, ESL & Thai Language teacher. I enjoy photography, art, music, cooking, learning programming and languages... +yoga. </p>
     <br><br> 
     <h4>Some photos from my website:</h4>
     <a href="https://djnatt.wixsite.com/natt">NattDaraC Photography</a>
@@ -23,11 +23,12 @@
     <a href="https://mamoowung.party/kreuung-ching/index.html">mamoowung.party</a>
     <br><br> 
     <h4>Enter the website for Lottery Generator created by me: </h4>
-    <a href="lotto-page/index.html">Natt's Lotto Generator</a>
+    <a href="lotto-page/index.html">$$ Natt's Lotto Generator $$</a>
     <br><br>  <br><br>
     <button>Change user</button>
-    <br> <br>
-
+    <br><br><br><br>
+    <button>Contact: nattdarac@gmail.com</button>
+    <br><br>
     <script src="scripts/main.js"></script>
   </body>
 </html>
